Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
4.7.1
-
Linux/MeeGo
Description
When investigating an issue with using the QML text input element with a custom InputContext, I find that the InputContext's mouseHandler() is not called.
The user story concerned word suggestions :
1) while typing a word, the current 'word' is underlined
2) tapping on the underlined 'word' results in a list of suggestions in
a pop-up dialog
This doesn't happen and is seems to be that the
QDeclarativeTextInput::mousePressEvent() method doesn't call the
mouseHandler() in the input context, which is what happens in
widgets/qlineedit_p.cpp for example.
I have worked around the issue by adding a MouseArea to the element and invoking a method in a C++ class to forward on the mouse press event. This works but causes other issues.
Attachments
Issue Links
- resulted in
-
QTBUG-17390 Child widgets don't inherit their parent's input contexts
-
- Closed
-