Forward mouse events from TextInput and TextEdit to QInputContext.

This brings TextInput in line with QLineEdit.  The fix for TextEdit
applies equally to QTextEdit.

Change-Id: I5c47e5c8e951ee53cb1fe45d9c302050cd19deef
Task-number: QTBUG-15705
Reviewed-by: axis