src/declarative/graphicsitems/qdeclarativetextedit.cpp
@@ -975,6 +975,10 @@ void QDeclarativeTextEdit::setSelectByMouse(bool on)
     if (d->selectByMouse != on) {
         d->selectByMouse = on;
         setKeepMouseGrab(on);
+        if (on)
+            setTextInteractionFlags(d->control->textInteractionFlags() | Qt::TextSelectableByMouse);
+        else
+            setTextInteractionFlags(d->control->textInteractionFlags() & ~Qt::TextSelectableByMouse);
         emit selectByMouseChanged(on);
     }
 }
@@ -1027,11 +1031,10 @@ void QDeclarativeTextEdit::setReadOnly(bool r)
     setFlag(QGraphicsItem::ItemAcceptsInputMethod, !r);
 
     Qt::TextInteractionFlags flags = Qt::LinksAccessibleByMouse;
-    if (r) {
+    if (d->selectByMouse)
         flags = flags | Qt::TextSelectableByMouse;
-    } else {
-        flags = flags | Qt::TextEditorInteraction;
-    }
+    if (!r)
+        flags = flags | Qt::TextSelectableByKeyboard | Qt::TextEditable;
     d->control->setTextInteractionFlags(flags);
     if (!r)
         d->control->moveCursor(QTextCursor::End);
@@ -1249,8 +1252,8 @@ void QDeclarativeTextEdit::mousePressEvent(QGraphicsSceneMouseEvent *event)
             }
         }
     }
-    if (event->type() != QEvent::GraphicsSceneMouseDoubleClick || d->selectByMouse)
-        d->control->processEvent(event, QPointF(0, -d->yoff));
+
+    d->control->processEvent(event, QPointF(0, -d->yoff));
     if (!event->isAccepted())
         QDeclarativePaintedItem::mousePressEvent(event);
 }
@@ -1285,13 +1288,11 @@ Handles the given mouse \a event.
 void QDeclarativeTextEdit::mouseDoubleClickEvent(QGraphicsSceneMouseEvent *event)
 {
     Q_D(QDeclarativeTextEdit);
-    if (d->selectByMouse) {
-        d->control->processEvent(event, QPointF(0, -d->yoff));
-        if (!event->isAccepted())
-            QDeclarativePaintedItem::mouseDoubleClickEvent(event);
-    } else {
+
+    d->control->processEvent(event, QPointF(0, -d->yoff));
+    if (!event->isAccepted())
         QDeclarativePaintedItem::mouseDoubleClickEvent(event);
-    }
+
 }
 
 /*!
@@ -1301,14 +1302,9 @@ Handles the given mouse \a event.
 void QDeclarativeTextEdit::mouseMoveEvent(QGraphicsSceneMouseEvent *event)
 {
     Q_D(QDeclarativeTextEdit);
-    if (d->selectByMouse) {
-        d->control->processEvent(event, QPointF(0, -d->yoff));
-        if (!event->isAccepted())
-            QDeclarativePaintedItem::mouseMoveEvent(event);
-        event->setAccepted(true);
-    } else {
+    d->control->processEvent(event, QPointF(0, -d->yoff));
+    if (!event->isAccepted())
         QDeclarativePaintedItem::mouseMoveEvent(event);
-    }
 }
 
 /*!
@@ -1407,7 +1403,7 @@ void QDeclarativeTextEditPrivate::init()
 
     control = new QTextControl(q);
     control->setIgnoreUnusedNavigationEvents(true);
-    control->setTextInteractionFlags(control->textInteractionFlags() | Qt::LinksAccessibleByMouse);
+    control->setTextInteractionFlags(Qt::LinksAccessibleByMouse | Qt::TextSelectableByKeyboard | Qt::TextEditable);
     control->setDragEnabled(false);
 
     // QTextControl follows the default text color
